2006-05-29  Li Guanglei <guanglei@cn.ibm.com>

	* systemtap.spec.in: include lket-b2a in the rpm package
 
2006-05-27  Li Guanglei <guanglei@cn.ibm.com>

	* configure.ac: add conditional build of lket-b2a
	if glib2-devel is not found, just skips and gives
	a warning
	* Makefile.am:  add conditional build of lket-b2a
	* Makefile.in, configure: regenerated
	* runtime/lket/b2a/Makefile: deleted. Should be
	generated by configure

2006-05-26  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (build_blacklist): build the sets of blacklisted
	functions and function returns.  Manually added many __kprobes
	functions that should not be probed.
	(dwarf_query::dwarf_query): Call build_blacklist.
	(dwarf_query::blacklisted_p): Use blacklist sets.

2006-05-25  Josh Stone  <joshua.i.stone@intel.com>

	* parse.cxx (parser::scan_pp): Free memory for tokens that are
	thrown away in the preprocessing stage.
	* tapsets.cxx
	(dwarf_var_expanding_copy_visitor::visit_target_symbol):
	Free allocated memory when supressing target-variable errors

2006-05-25  David Smith  <dsmith@redhat.com>

	* testsuite/semok/twentyone.stp: New file.

2006-05-24  Frank Ch. Eigler  <fche@elastic.org>

	Pass 4 speedup.
	* tapsets.cxx (derived_probe::emit_common_header): New
	function, to emit code formerly inlined by
	emit_probe_prologue/epilogue.
	* translate.cxx (emit_common_header): Call it.
	* elaborate.h: Corresponding changes.

2006-05-24  David Smith  <dsmith@redhat.com>

	* elaborate.cxx (isglob): New function.
	(match_key::globmatch): New function.
	(match_node::find_and_build): Uses isglob() and
	match_key::globmatch() to provide support for wildcards such as
	"kernel.syscall.*read*" (Bugzilla #1928).
	* elaborate.h (match_key::globmatch): Added function declaration.
	* parse.cxx (parser::parse_probe_point): Collects one or more
	tokens into a single probe-point functor string.

	* testsuite/parseko/twentytwo.stp: New file.
	* testsuite/parseok/sixteen.stp: New file.
