@@ -11,31 +11,24 @@ probe addevent.syscall
 }
 
 /* log the system call name */
-function log_syscall_tracedata(var_id:long, name:string, backtrace:long)
+function log_syscall_tracedata(var_id:long, name:string)
 %{
-	if(THIS->backtrace == 1)  {
-                String str = _stp_string_init (0);
-                _stp_stack_sprint (str, CONTEXT->regs, 0);
-
-		_lket_trace(_GROUP_SYSCALL, THIS->var_id, "%0s%0s", THIS->name, _stp_string_ptr(str)); 
-	}  else  {
-		_lket_trace(_GROUP_SYSCALL, THIS->var_id, "%0s", THIS->name); 
-	}
+	_lket_trace(_GROUP_SYSCALL, THIS->var_id, "%0s", THIS->name); 
 %}
 
 
 probe addevent.syscall.entry
-	+= syscall.*
+	= syscall.*
 {
 	if(filter_by_pid() == 1 ) {
-		log_syscall_tracedata(HOOKID_SYSCALL_ENTRY, name, backtrace)
+		log_syscall_tracedata(HOOKID_SYSCALL_ENTRY, name)
 	}
 }
 
 probe addevent.syscall.return
-	+= syscall.*.return
+	= syscall.*.return
 {
 	if(filter_by_pid() == 1 ) {
-		log_syscall_tracedata(HOOKID_SYSCALL_RETURN, name, backtrace)
+		log_syscall_tracedata(HOOKID_SYSCALL_RETURN, name)
 	}
 }
