@@ -23,12 +23,12 @@ probe addevent.tskdispatch
 
 /* Only applicable to SMP systems */
 probe addevent.tskdispatch.cpuidle
-	+= scheduler.balance
+	= scheduler.balance
 {
 	/* we didn't call filter_by_pid() here,
 	 so that we can get all the idle events
 	 despite how the cpu enters idle */
-	log_cpuidle_tracedata(HOOKID_TASK_CPUIDLE, backtrace)
+	log_cpuidle_tracedata(HOOKID_TASK_CPUIDLE)
 }
 
 probe addevent.tskdispatch.ctxswitch
@@ -51,22 +51,13 @@ function log_ctxswitch_tracedata(var_id:long, prev:long, next_pid:long)
 	prev_tsk = (struct task_struct *)((long)THIS->prev);
 	next_tsk = (struct task_struct *)((long)THIS->next_pid);
 
-	_lket_trace(_GROUP_TASK, THIS->var_id, "%4b%4b%1b", (_FMT_)prev_tsk->pid, (_FMT_)next_tsk->pid, 
-		(_FMT_)prev_tsk->state); 
+	_lket_trace(_GROUP_TASK, THIS->var_id, "%4b%4b%1b", (_FMT_)prev_tsk->pid, 
+		(_FMT_)next_tsk->pid, (_FMT_)prev_tsk->state); 
 %}
 
-function log_cpuidle_tracedata(var_id:long, backtrace:long)
+function log_cpuidle_tracedata(var_id:long)
 %{
 	struct task_struct *cur = current;
 
-	if(THIS->backtrace == 1) {
-		String str = _stp_string_init (0);
-                _stp_stack_sprint (str, CONTEXT->regs, 0);
-		_lket_trace(_GROUP_TASK, THIS->var_id, "%4b%0s", (_FMT_)cur->pid,  _stp_string_ptr(str)); 
-	} else  {
-		_lket_trace(_GROUP_TASK, THIS->var_id, "%4b", (_FMT_)cur->pid); 
-	}
+	_lket_trace(_GROUP_TASK, THIS->var_id, "%4b", (_FMT_)cur->pid); 
 %}
-
-
-
