@@ -37,8 +37,6 @@
 
 2006-05-25  Li Guanglei <guanglei@cn.ibm.com>
 	
-	* LKET/*.stp: explicitly add type qualifier for different arch
-	 to make _stp_vsnprintf get the argument by va_arg correctly.
 	* scheduler.stp: add prev_task and next_task variable.
 
 2006-05-24  Josh Stone  <joshua.i.stone@intel.com>
@@ -69,14 +67,6 @@
 	* tapset/tskschedule.stp: deleted, merge into scheduler.stp
 	* tapset/scheduler.stp:   incorporate tskschedule.stp
 	
-2006-05-18  Li Guanglei <guanglei@cn.ibm.com>
-
-	* testsuite/buildok/ioscheduler.stp: testcase for ioscheduler.stp
-	* testsuite/buildok/memory.stp:      testcase for memory.stp
-	* testsuite/buildok/networking.stp:  testcase for networking.stp
-	* testsuite/buildok/scsi.stp:        testcase for scsi.stp
-	* testsuite/buildok/tskschedule.stp: testcase for tskschedule.stp
-
 2006-05-17  Josh Stone  <joshua.i.stone@intel.com>
 
 	* process.stp: Rename signal.send to signal_send and process.complete
